add editUser endpoint
