# base-backend/src/main/java/com/samkruglov/base/api/UserController.java
@@ -1,6 +1,7 @@
 package com.samkruglov.base.api;
 
 import com.samkruglov.base.api.config.Current;
+import com.samkruglov.base.api.view.ChangeUserDto;
 import com.samkruglov.base.api.view.CreateUserDto;
 import com.samkruglov.base.api.view.GetUserDto;
 import com.samkruglov.base.api.view.mapper.UserMapper;
@@ -13,6 +14,7 @@ import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -42,6 +44,16 @@ public class UserController {
     @GetMapping("/{email}")
     public GetUserDto getUser(@PathVariable String email) {
         return mapper.toGetUserDto(service.getByEmail(email));
+    }
+
+    @PutMapping("/self")
+    public void changeMe(@Current User user, @RequestBody ChangeUserDto changeDto) {
+        service.change(user, changeDto);
+    }
+
+    @PutMapping("/{email}")
+    public void changeUser(@PathVariable String email, @RequestBody ChangeUserDto changeDto) {
+        service.changeByEmail(email, changeDto);
     }
 
     @DeleteMapping("/{email}")
