# base-backend/src/main/java/com/samkruglov/base/api/view/mapper/UserMapper.java
@@ -1,11 +1,14 @@
 package com.samkruglov.base.api.view.mapper;
 
+import com.samkruglov.base.api.view.ChangeUserDto;
 import com.samkruglov.base.api.view.CreateUserDto;
 import com.samkruglov.base.api.view.GetUserDto;
 import com.samkruglov.base.api.view.mapper.config.CreatorMapperConfig;
+import com.samkruglov.base.api.view.mapper.config.UpdaterMapperConfig;
 import com.samkruglov.base.domain.Role;
 import com.samkruglov.base.domain.User;
 import org.mapstruct.Mapper;
+import org.mapstruct.MappingTarget;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
@@ -17,7 +20,14 @@ public abstract class UserMapper {
     @Autowired
     protected PasswordEncoder passwordEncoder;
 
+    @Autowired
+    protected Updater updater;
+
     public abstract GetUserDto toGetUserDto(User user);
+
+    public void updateUser(User user, ChangeUserDto changeDto) {
+        updater.updateUser(user, changeDto);
+    }
 
     public User toUser(CreateUserDto userDto, List<Role> roles) {
         return new User(
@@ -27,5 +37,11 @@ public abstract class UserMapper {
                 passwordEncoder.encode(userDto.getPassword()),
                 roles
         );
+    }
+
+    @Mapper(config = UpdaterMapperConfig.class)
+    interface Updater {
+
+        void updateUser(@MappingTarget User user, ChangeUserDto changeDto);
     }
 }
