# base-client/api/openapi.yaml
@@ -193,6 +193,55 @@ paths:
       tags:
         - users
       x-accepts: application/json
+    put:
+      operationId: changeUser
+      parameters:
+        - explode: false
+          in: path
+          name: email
+          required: true
+          schema:
+            type: string
+          style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangeUserDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+        "401":
+          content: { }
+          description: Unauthorized
+          headers:
+            WWW-Authenticate:
+              description: '[RFC 6750#3](https://tools.ietf.org/html/rfc6750#section-3)'
+              explode: false
+              schema:
+                type: string
+              style: simple
+        "403":
+          content: { }
+          description: Forbidden
+          headers:
+            WWW-Authenticate:
+              description: '[RFC 6750#3](https://tools.ietf.org/html/rfc6750#section-3)'
+              explode: false
+              schema:
+                type: string
+              style: simple
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: other error responses
+      tags:
+        - users
+      x-contentType: application/json
+      x-accepts: application/json
   /api/users/self:
     delete:
       operationId: removeMe
@@ -266,6 +315,47 @@ paths:
       tags:
         - users
       x-accepts: application/json
+    put:
+      operationId: changeMe
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangeUserDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+        "401":
+          content: { }
+          description: Unauthorized
+          headers:
+            WWW-Authenticate:
+              description: '[RFC 6750#3](https://tools.ietf.org/html/rfc6750#section-3)'
+              explode: false
+              schema:
+                type: string
+              style: simple
+        "403":
+          content: { }
+          description: Forbidden
+          headers:
+            WWW-Authenticate:
+              description: '[RFC 6750#3](https://tools.ietf.org/html/rfc6750#section-3)'
+              explode: false
+              schema:
+                type: string
+              style: simple
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: other error responses
+      tags:
+        - users
+      x-contentType: application/json
+      x-accepts: application/json
 components:
   responses:
     "401":
@@ -326,6 +416,16 @@ components:
             - User not found
             - Email already exists
         message:
+          type: string
+      type: object
+    ChangeUserDto:
+      example:
+        firstName: firstName
+        lastName: lastName
+      properties:
+        firstName:
+          type: string
+        lastName:
           type: string
       type: object
     CreateUserDto:
